--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   # url_launcher: ^6.1.8
   flutter_phone_direct_caller: ^2.1.1
   flutter_contacts: ^1.1.5+1
+  # whatsapp: ^2.0.0
+  animated_text_kit: ^4.2.2
+  flutter_tts: ^3.2.2
+
+ 
   
 
 dev_dependencies:
